# essm

./: CMakeLists.txt  README.md
.github/workflows/: essm.yml
cmake/: ESSMLibrary.cmake  ESSMUnitTests.cmake
example/: CMakeLists.txt  README.md
example/E01_SimpleService/: CMakeLists.txt  README.md  main.cpp
example/E02_Subservice/: CMakeLists.txt  Events.hpp  main.cpp
example/E02_Subservice/services/: Bank.cpp  Bank.hpp  Payment.cpp  Payment.hpp
example/E03_Routing/: CMakeLists.txt  README.md  main.cpp
example/E04_StateMachine/: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  README.md
src/events/: CMakeLists.txt
src/events/include/essm/events/: Event.hpp  EventTraits.hpp
src/helpers/: CMakeLists.txt
src/helpers/include/essm/helpers/: Hash.hpp
src/logger/: CMakeLists.txt  README.md
src/logger/include/essm/logger/: BackendFmt.hpp  BackendStd.hpp  ExposeBackend.hpp  Logger.hpp
src/logger/include/essm/logger/detail/: BackendFmt.hpp  BackendSpdlog.hpp  BackendStd.hpp  ExposeBackend.hpp  Filename.hpp
src/router/: CMakeLists.txt
src/router/include/essm/router/: Router.hpp
src/service/: CMakeLists.txt
src/service/include/essm/service/: EventService.hpp  MessageService.hpp
src/service/test/: EventServiceTest.cpp
src/state_machine/: CMakeLists.txt
src/state_machine/include/essm/state_machine/: State.hpp  StateMachine.hpp  StateTraits.hpp
src/types/: CMakeLists.txt
src/types/include/essm/types/: ProcessingStatus.hpp  Traits.hpp
utils/format/: format  format_cpp
utils/mdextract/: README.md  mdextract
